--- a/src/test.html
+++ b/src/test.html
@@ -8,13 +8,8 @@
 
 </body>
 <script>
-<<<<<<< HEAD
-    console.log('aaa')
-    console.log('bbb')
-=======
     console.log('aaa');
     console.log('day0.0.2');
-
->>>>>>> day0.0.2
+    console.log('treee');
 </script>
 </html>
